Added a grades section

--- a/student3.html
+++ b/student3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>Student Portal</h1>
+		<h1><u>Student Portal</u></h1>
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
