--- a/lecturer-portal.html
+++ b/lecturer-portal.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>Lecturer Portal</title>
-	<link rel="stylesheet" type="text/css" href="lecturer4.css">
+	<link rel="stylesheet" type="text/css" href="lecturer-portal.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="lecturer-portal.js"></script>
 </head>
 <body>
 	<header>
@@ -115,6 +116,6 @@
 <footer>
 <p>&copy; Lecturer Portal 2023</p>
 </footer>
-<script src="lecturer4.js"></script>
+
 </body>
 </html>
