--- a/student-portal.html
+++ b/student-portal.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Student Portal</title>
-	<link rel="stylesheet" type="text/css" href="student3.css">
+	<link rel="stylesheet" type="text/css" href="student-portal.css">
+	<script src="student-portal.js" defer></script>
 </head>
 <body>
 	<header>
@@ -58,7 +59,6 @@
 	</main>
 	<footer>
 		<p>&copy; Student Portal 2023</p>
-	</footer>
-	<script src="student3.js"></script>
+	</footer>	
 </body>
 </html>
