--- a/registration.html
+++ b/registration.html
@@ -3,6 +3,7 @@
   <head>
     <title>User's Registration</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="registration.js"></script>
   </head>
   <body>
     <div class="container">
@@ -51,6 +52,6 @@
         </tbody>
       </table>
     </div>
-    <script src="script.js"></script>
+    
   </body>
 </html>
