--- a/registration.html
+++ b/registration.html
@@ -11,40 +11,42 @@
   <div class="container">
     <h1><u>User's registration</u></h1>
     <form class="registration-form">
-      <div class="form-item">
-        <label for="firstName">First Name:</label>
+      <div class="registration-form-item">
+        <label for="firstName" class="registration-form-label">First Name:</label>
         <input type="text" id="firstName" name="firstName" required>
       </div>
-      <div class="form-item">
-        <label for="lastName">Last Name:</label>
+      <div class="registration-form-item">
+        <label for="lastName" class="registration-form-label">Last Name:</label>
         <input type="text" id="lastName" name="lastName" required>
       </div>
-      <div class="form-item">
-        <label for="email">Email:</label>
+      <div class="registration-form-item">
+        <label for="email" class="registration-form-label">Email:</label>
         <input type="email" id="email" name="email" required>
       </div>
-      <div class="form-item">
-        <label for="phoneNumber">Phone Number:</label>
+      <div class="registration-form-item">
+        <label for="phoneNumber" class="registration-form-label">Phone Number:</label>
         <input type="tel" id="phoneNumber" name="phoneNumber" required>
       </div>
-      <div class="form-item">
-        <label for="password">Password:</label>
+      <div class="registration-form-item">
+        <label for="password" class="registration-form-label">Password:</label>
         <input type="password" id="password" name="password" required>
       </div>
-      <div class="form-item">
-        <label for="gender">Gender:</label>
+      <div class="registration-form-item">
+        <label for="gender" class="registration-form-label">Gender:</label>
         <select id="gender" name="gender" required>
           <option value="">--Select--</option>
           <option value="male">Male</option>
           <option value="female">Female</option>
         </select>
       </div>
-
-
-      <label for="isAdmin">Is Admin:</label>
-      <input type="checkbox" id="isAdmin" name="isAdmin"><br><br>
-
-      <button type="submit">Submit</button>
+      <div>
+        <label for="isAdmin" class="registration-form-label">Is Admin:</label>
+      <input type="checkbox" id="isAdmin" name="isAdmin">
+      </div>
+      <div class="registration-form-item">
+        <button type="submit" class="registration-form-btn">Submit</button>
+      </div>
+      
     </form>
     <br>
     <table>
