--- a/registration.html
+++ b/registration.html
@@ -48,15 +48,15 @@
           <option value="lecturer">Lecturer</option>
         </select>
       </div>
-      <div class="registration-form-item hide dob">
+      <div class="registration-form-item hide studentsInputs">
         <label for="dob" class="registration-form-label">Date of Birth:</label>
         <input type="date" id="dob">
       </div>
-      <div class="registration-form-item hide year">
+      <div class="registration-form-item hide studentsInputs">
         <label for="year" class="registration-form-label">Year of study</label>
         <input type="number" max="3" min="1" id="year">
       </div>
-      <div class="registration-form-item hide course">
+      <div class="registration-form-item hide studentsInputs">
         <label for="course" class="registration-form-label">Course</label>
         <select name="course" id="course">
           <option value="">--Select--</option>
@@ -64,7 +64,7 @@
           <option value="Mathematics">Mathematics</option>
         </select>
       </div>
-      <div class="registration-form-item hide department">
+      <div class="registration-form-item hide lecturerInput">
         <label for="department" class="registration-form-label">Department</label>
         <select name="department" id="department">
           <option value="">--Select--</option>
