Re-establish the links

--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li><a href="../home.php">Home</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
+          <li><a href="../about-us/contact-us.php">Contact Us</a></li>
         </ul>
       </nav>
     </header>
