--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -18,7 +18,7 @@
       <section class="about-us">
         <h1>About Us</h1>
         <p>We are a commercial company dedicated to providing a seamless experience for customers. Our web site is designed to make it easy for customers to choose from a variety of websites we design. We also provide customers with the tools they need to manage and customize their website to their perference.</p>
-        <p>If you have any questions or comments, please don't hesitate to <a href="contact-us.html">contact us</a>.</p>
+        <p>If you have any questions or comments, please don't hesitate to <a href="contact-us.php">contact us</a>.</p>
         <p>
           Our school portal system offers a secure and user-friendly interface. It is designed to provide students and faculty with a seamless and efficient experience, allowing them to easily access important information and complete tasks online.
         </p>
