--- a/about-us/about-us.html
+++ b/about-us/about-us.html
@@ -5,7 +5,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="about-contact-us.css">
   </head>
-  <body>
+  <body class="about-us-body">
     <header>
       <nav>
         <ul>
